[package]
name = "cosmwasm-vault-standard"
version = "0.1.1"
edition = "2021"
authors = ["Sturdy <sturdy@apollo.farm>"]
license = "Apache-2.0"
description = "A standard interface for tokenized vaults written in CosmWasm"
homepage = "https://github.com/apollodao/cosmwasm-vault-standard/"
documentation = "https://docs.rs/cosmwasm-vault-standard"
repository = "https://github.com/apollodao/cosmwasm-vault-standard/"
readme = "README.md"

[features]
default = []
lockup = ["cw-utils"]
force-unlock = []
keeper = []
cw4626 = ["cw20"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cosmwasm-std = "1.1.9"
schemars = "0.8.11"
serde = { version = "1.0.150", default-features = false, features = ["derive"] }
cosmwasm-schema = { version = "1.1.9" }
cw-utils = { version = "1.0.0", optional = true }
cw20 = { version = "1.0.0", optional = true }
