[workspace]
members = [
    "cw-vault-standard",
    "mock-vault"
]

[workspace.package]
version           = "0.3.2"
edition           = "2021"
authors           = ["Sturdy <sturdy@apollo.farm>"]
license           = "Apache-2.0"
homepage          = "https://github.com/apollodao/cw-vault-standard/"
repository        = "https://github.com/apollodao/cw-vault-standard/"
keywords          = ["cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-std      = "1.2.1"
schemars          = "0.8.11"
serde             = { version = "1.0.152", default-features = false, features = ["derive"] }
cosmwasm-schema   = "1.2.1"
cw-utils          = { version = "1.0.1" }
cw20              = { version = "1.0.1" }
cw-storage-plus   = "1.1.0"
cw2               = "1.1.0"
mars-owner        = "2.0.0"
osmosis-std       = "0.16.1"
cw-vault-standard = { path = "./cw-vault-standard" }

# dev dependencies
cw-it             = "0.1.0"
proptest          = "1.2.0"


[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
incremental       = false
lto               = true
overflow-checks   = true
opt-level         = 3
panic             = "abort"
rpath             = false
