[workspace]
members = [
    "cw-vault-standard",
    "test-helpers",
]
resolver = "2"

[workspace.package]
edition           = "2021"
authors           = ["Sturdy <sturdy@apollo.farm>", "Pacman <pacman@apollo.farm>"]
license           = "Apache-2.0"
homepage          = "https://github.com/apollodao/cw-vault-standard/"
repository        = "https://github.com/apollodao/cw-vault-standard/"
keywords          = ["cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-std                    = "1.5.4"
schemars                        = "0.8.11"
serde                           = { version = "1.0.152", default-features = false, features = ["derive"] }
cosmwasm-schema                 = "1.2.1"
cw-utils                        = { version = "1.0.1" }
cw20                            = { version = "1.0.1" }
cw-storage-plus                 = "1.1.0"
cw2                             = "1.1.0"
mars-owner                      = "2.0.0"
osmosis-std                     = "0.16.1"
cw-vault-standard               = { version = "0.3.3", path = "./cw-vault-standard" }
cw-vault-standard-test-helpers  = { version = "0.3.3", path = "./test-helpers" }

# dev dependencies
proptest          = "1.2.0"


[profile.release]
codegen-units     = 1
debug             = false
debug-assertions  = false
incremental       = false
lto               = true
overflow-checks   = true
opt-level         = 3
panic             = "abort"
rpath             = false
