[package]
name        = "cw-vault-standard-test-helpers"
version     = "0.3.3"
description = "Test helpers for cw-vault-standard compliant contracts."
edition     = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }
homepage    = { workspace = true }
repository  = { workspace = true }
keywords    = { workspace = true }

[features]
default = ["lockup", "force-unlock"]
lockup = ["cw-vault-standard/lockup"]
force-unlock = ["cw-vault-standard/force-unlock"]

[dependencies]
cosmwasm-std        = { workspace = true }
cw-vault-standard   = { workspace = true }
cw-utils            = { workspace = true }
cw-it               = { workspace = true }
